--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0",
-    "react-sortable-hoc": "^1.11.0"
+    "react-sortable-hoc": "^1.11.0",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start || node ./node_modules/react-scripts/bin/react-scripts start",
